test/sema/typeck/struct/type-params-arity-recovery-wrong-field-type.dora
struct Foo[T] { value: T }

fn missing(): Foo[Bool] {
    Foo(value = 1i32)
}

fn tooMany(): Foo[Bool] {
    Foo[Bool, Int32](value = 1i32)
}
